* net-snmp: aktualizace na verzi z upstreamu
* iptables: -m socket bere --nowildcard parametr
* Ucollect: fake plugin (zatím jen pro testování)
* Updater: malá oprava logování
* Luci aplikace majordomo a rainbow jsou nyní jako samostatné balíčky
* Nuci: Kloudná chyba při ukládání do poškozeného konfiguráku
* Nuci: přidán plugin Securris (v balíčku nuci-securris).
* Nikola: filtrování paketů, co se posílají na server, podle lokální adresy
* Nikola: posílání TCP flagů na server
* Ucollect: Nepoužívá promiskuidní mód
===================== 2.1 =======================
* Firewall: Lepší popis pravidel zachycených na firewallu.
* Nikola: Přidána kontrola zachytávání paketů pravidly projektu Turris
* nginx: kompilován s SSL podporou.
* nginx: aktualizace na nejnovější verzi z upstreamu.
* Postfix (+ tinycdb): nový balíček z upstreamu.
* Majoromo: Opravena chyba v parseru cache
* Foris (v52): možnost použít přefix URL pro Foris v konfiguraci; opravy drobných chyb.
* nuci načítá definice userlistů ze souboru od updateru
* Updater stahuje definice userlistů
* Updater nainstaluje jen základní balíky pokud atsha selže
* python: aktualizace na verzi 2.7.9 z upstreamu, refactoring závislostí na Pythonu (místo python-mini + python je nyní python-base + python).
* Updater umožňuje přepsat některé parametry
* unbound zvedá limity na počet TCP spojení
* owfs: aktualizace na nejnovější verzi z upstreamu openwrt/packages.
* Majordomo používá naši vlastní databázi výrobců MAC adres instalované u uživatele. Nadále nepoužívá externí webovou službu.
* Program Thermometer nahrazen programem lm-sensors
* Rainbow obsahuje podporu pro SMRT
* Oprava odstraňování essential packages v updateru
* Smrtd po sobě uklízí
* User list na honeypot, webcam
===================== 2.0 =======================
* Novější verze squid
* User list ca certificates a tor v nuci
* Hlášení z coverity opravená v ucollect
* Drobné opravy statistik z nuci (board name, turris OS version)